--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ NEXT_PUBLIC_API_URL=http://localhost:3000/api
 # NFTSCAN_API_KEY=your_key_here
 # OPENSEA_API_KEY=your_key_here
 # Nansen API key (server-side) - set this in your deployment environment (do NOT commit real keys to public repos)
-NANSEN_API_KEY=[REDACTED_NANSEN_API_KEY]
+NANSEN_API_KEY=YOUR_NANSEN_API_KEY
